# hardin-data-collection

./: .gitignore  Dockerfile  README.md  digest.py  pyproject.toml  template.yaml
.github/workflows/: deploy.yml
app/: app.py  requirements.txt
