[tool.poetry]
name = "hardin-data-collection"
version = "0.1.0"
description = ""
authors = ["adelmofilho <adelmo.aguiar.filho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudatlas = "^0.0.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
